[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/MusicManager/Scripts/bpmTSMarker.gd" type="Script" id=1]
[ext_resource path="res://addons/MusicManager/Images/Time Select.png" type="Texture" id=2]

[node name="bpmTSMarker" type="Control"]
margin_left = -292.418
margin_right = -223.418
margin_bottom = 40.0
script = ExtResource( 1 )
fixed = false

[node name="BPM" type="LineEdit" parent="."]
margin_left = 3.0
margin_top = -1.19209e-07
margin_right = 61.0
margin_bottom = 24.0
rect_scale = Vector2( 0.85, 0.85 )
text = "120"

[node name="TimeSigTop" type="LineEdit" parent="."]
margin_left = 2.99999
margin_top = 19.9805
margin_right = 61.0
margin_bottom = 43.9805
rect_scale = Vector2( 0.85, 0.85 )
text = "4"
max_length = 2

[node name="TimeSigBottom" type="OptionButton" parent="."]
margin_left = 21.0867
margin_top = 21.4274
margin_right = 70.0867
margin_bottom = 41.4274
rect_scale = Vector2( 0.85, 0.85 )
text = "4"
items = [ "2", null, false, 0, null, "4", null, false, 1, null, "8", null, false, 2, null ]
selected = 1

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 19.0
margin_right = 24.0
margin_bottom = 33.0
text = "/"

[node name="Marker" type="TextureButton" parent="."]
margin_top = 40.0
margin_right = 8.26
margin_bottom = 80.0
rect_scale = Vector2( 1, -1 )
mouse_default_cursor_shape = 10
button_mask = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[connection signal="text_changed" from="BPM" to="." method="_on_BPM_text_changed"]
[connection signal="text_changed" from="TimeSigTop" to="." method="_on_TimeSigTop_text_changed"]
[connection signal="item_selected" from="TimeSigBottom" to="." method="_on_TimeSigBottom_item_selected"]
